[package]
name = "my-grpc-extensions"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
adjust-server-stream = []
grpc-client = ["my-grpc-client-macros"]
grpc-server = ["my-grpc-server-macros"]


[dependencies]
my-telemetry = { tag = "1.0.1", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
] }

my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
futures-util = "*"
tokio-stream = "*"
futures = "*"
async-trait = "*"
my-grpc-client-macros = {optional = true, path = "../my-grpc-client-macros" }
my-grpc-server-macros = {optional = true, path = "../my-grpc-server-macros" }
external-dependencies = {path = "../external-dependencies" }
futures-core = "*"