[package]
name = "my-grpc-extensions"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
adjust-server-stream = []
with-telemetry = ["dep:my-telemetry", "my-grpc-client-macros?/with-telemetry"]
grpc-client = ["my-grpc-client-macros"]
grpc-server = ["my-grpc-server-macros"]
with-tls = ["my-tls"]


[dependencies]
my-telemetry = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
], optional = true }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }


my-tls = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-tls.git", optional = true }
tokio = { version = "*", features = ["full"] }
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*" }
futures-util = "*"
tokio-stream = "*"
futures = "*"
async-trait = "*"
my-grpc-client-macros = { optional = true, path = "../my-grpc-client-macros" }
my-grpc-server-macros = { optional = true, path = "../my-grpc-server-macros" }
external-dependencies = { path = "../external-dependencies" }
futures-core = "*"
