[package]
name = "my-grpc-extensions"
version = "0.6.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-telemetry = ["dep:my-telemetry", "my-grpc-client-macros?/with-telemetry"]
grpc-client = ["my-grpc-client-macros"]
grpc-server = ["my-grpc-server-macros"]
with-tls = ["my-tls"]

with-ssh = ["my-ssh", "my-grpc-client-macros?/with-ssh"]


[dependencies]
my-telemetry = { tag = "1.2.2", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
], optional = true }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

lazy_static = "*"


my-tls = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-tls.git", optional = true }
tokio = { version = "*" }
tonic = { version = "*" }
hyper = { version = "*" }
hyper-util = { version = "*", features = ["tokio"] }
futures-util = "*"
tokio-stream = "*"
futures = "*"
async-trait = "*"
tower = { version = "*", features = ["util"] }
my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git", optional = true }
my-grpc-client-macros = { optional = true, path = "../my-grpc-client-macros" }
my-grpc-server-macros = { optional = true, path = "../my-grpc-server-macros" }
external-dependencies = { path = "../external-dependencies" }
futures-core = "*"
