[package]
name = "my-grpc-server-macros"
version = "0.6.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
types-reader = { tag = "0.5.1", git = "https://github.com/MyJetTools/types-reader.git" }
proto-file-reader = { path = "../proto-file-reader" }
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
